# Foreign-Exchange

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
Foreign-Exchange/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md
Foreign-Exchange/.devcontainer/: devcontainer.json
Foreign-Exchange/backend/: CMakeLists.txt
Foreign-Exchange/backend/analysis/: CMakeLists.txt
Foreign-Exchange/backend/api/: CMakeLists.txt
Foreign-Exchange/backend/api/include/api/: http_ws_server.hpp  market_gateway.hpp
Foreign-Exchange/backend/api/src/: http_ws_server.cpp  market_gateway.cpp
Foreign-Exchange/backend/backtest/: CMakeLists.txt
Foreign-Exchange/backend/common/: CMakeLists.txt
Foreign-Exchange/backend/datafeed/: CMakeLists.txt
Foreign-Exchange/backend/include/audit/: logger.hpp
Foreign-Exchange/backend/include/backtest/: backtest_engine.hpp
Foreign-Exchange/backend/include/benchmark/: latency_tester.hpp
Foreign-Exchange/backend/include/bus/: message_bus.hpp  message_protocol.hpp
Foreign-Exchange/backend/include/codec/: market_tick_codec.hpp
Foreign-Exchange/backend/include/core/: error.hpp  errors.h  fixed_point.hpp  time_utils.hpp  types.h
Foreign-Exchange/backend/include/datafeed/: feed_player.hpp  market_parser.h  normalizer.h
Foreign-Exchange/backend/include/engine/: order_book.hpp
Foreign-Exchange/backend/include/gateway/: exchange_gateway.hpp  execution_quality.hpp  fix_adapter.hpp  market_simulator.hpp  smart_order_router.hpp  venue.hpp
Foreign-Exchange/backend/include/network/: socket_manager.h
Foreign-Exchange/backend/include/persist/: data_writer.hpp  event_journal.hpp
Foreign-Exchange/backend/include/risk/: risk_manager.hpp  var_calculator.hpp
Foreign-Exchange/backend/include/trading/: order_manager.hpp
Foreign-Exchange/backend/order/: CMakeLists.txt
Foreign-Exchange/backend/risk/: CMakeLists.txt
Foreign-Exchange/backend/schema/: argentum.fbs
Foreign-Exchange/backend/src/: main.cpp
Foreign-Exchange/backend/src/backtest/: backtest_engine.cpp
Foreign-Exchange/backend/src/benchmark/: pipeline_benchmark.cpp
Foreign-Exchange/backend/src/bus/: message_bus.cpp  message_protocol.cpp
Foreign-Exchange/backend/src/codec/: market_tick_codec.cpp
Foreign-Exchange/backend/src/core/: dummy.c  time_utils.cpp
Foreign-Exchange/backend/src/datafeed/: feed_player.cpp  market_parser.c  normalizer.c
Foreign-Exchange/backend/src/engine/: order_book.cpp
Foreign-Exchange/backend/src/gateway/: execution_quality.cpp  fix_adapter.cpp  market_simulator.cpp  smart_order_router.cpp
Foreign-Exchange/backend/src/network/: socket_manager.c
Foreign-Exchange/backend/src/persist/: data_writer.cpp  event_journal.cpp
Foreign-Exchange/backend/src/replay/: replay_main.cpp
Foreign-Exchange/backend/src/risk/: risk_manager.cpp
Foreign-Exchange/backend/src/trading/: order_manager.cpp
Foreign-Exchange/backend/tests/: CMakeLists.txt  api_gateway_contract_test.cpp  api_network_e2e_test.cpp  api_order_guard_test.cpp  data_writer_test.cpp  event_journal_replay_test.cpp  execution_quality_report_test.cpp  fix_adapter_test.cpp  market_simulator_test.cpp  message_bus_test.cpp  message_codec_test.cpp  order_concurrency_test.cpp  order_flow_test.cpp  order_tif_test.cpp  risk_reservation_test.cpp  router_l2_reroute_test.cpp  smart_router_test.cpp
Foreign-Exchange/build-codex/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.tmpa84fe  CMakeCache.txt  CMakeCache.txt.tmp19291  CTestTestfile.cmake  RUN_TESTS.vcxproj.filters  RUN_TESTS.vcxproj.tmp39f51  ZERO_CHECK.vcxproj.filters  ZERO_CHECK.vcxproj.tmpd7d02  argentum_fx.slnx  argentum_fx.slnx.tmp81844  cmake_install.cmake.tmpc5fbb
Foreign-Exchange/build-local/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters.tmp134da  ALL_BUILD.vcxproj.tmp60d5d  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj.filters  RUN_TESTS.vcxproj.tmp915aa  ZERO_CHECK.vcxproj.filters.tmp7ba4a  ZERO_CHECK.vcxproj.tmpd3780  argentum_fx.slnx  argentum_fx.slnx.tmp8d64e  cmake_install.cmake
Foreign-Exchange/build-phase23/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.tmpa0a16  CMakeCache.txt.tmp31a9a  CMakeCache.txt.tmpcd3ab  CTestTestfile.cmake.tmpb7b4d  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  argentum_fx.slnx  argentum_fx.slnx.tmp6dfd8  cmake_install.cmake
Foreign-Exchange/build-phase23v2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  argentum_fx.slnx  cmake_install.cmake
Foreign-Exchange/build-senior/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.tmpc5ece  CMakeCache.txt  CMakeCache.txt.tmp4b348  CMakeCache.txt.tmpb7ca4  CTestTestfile.cmake.tmp0daad  RUN_TESTS.vcxproj.filters  RUN_TESTS.vcxproj.tmp33183  argentum_fx.slnx  (+2 more)
backend/: CMakeLists.txt
backend/analysis/: CMakeLists.txt
backend/api/: CMakeLists.txt
backend/backtest/: CMakeLists.txt
backend/common/: CMakeLists.txt
backend/datafeed/: CMakeLists.txt
backend/include/alerts/: alert_system.hpp
backend/include/analysis/: strategy.hpp
backend/include/audit/: logger.hpp
backend/include/backtest/: backtest_engine.hpp
backend/include/benchmark/: latency_tester.hpp
backend/include/bus/: message_bus.hpp  message_protocol.hpp
backend/include/core/: types.h
backend/include/datafeed/: market_parser.h  normalizer.h
backend/include/ml/: python_bridge.hpp
backend/include/persist/: data_writer.hpp
backend/include/risk/: risk_manager.hpp
backend/include/system/: cpu_utils.hpp
backend/include/trading/: order_manager.hpp
backend/order/: CMakeLists.txt
backend/risk/: CMakeLists.txt
backend/src/: main.cpp
backend/src/backtest/: backtest_engine.cpp
backend/src/bus/: message_bus.cpp  message_protocol.cpp
backend/src/datafeed/: feed_player.cpp  market_parser.c  normalizer.c
backend/src/engine/: order_book.cpp
backend/src/network/: socket_manager.c
backend/src/persist/: data_writer.cpp
backend/src/risk/: risk_manager.cpp
data/: sample_ticks.jsonl
frontend/: package.json  tailwind.config.js
infra/: docker-compose.yml
(+1308 files in other folders)
